--- a/Week3/HomeWork/js-exercises/Project-j3-w3/index.html
+++ b/Week3/HomeWork/js-exercises/Project-j3-w3/index.html
@@ -22,6 +22,7 @@
       <div id="repos"></div>
       <div id="contributors"></div>
   </div>
-      <script src="./index.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
